[package]
name = "TOTPBox"
version = "1.0.0"
authors = ["Kevin Loeffler"]
edition = "2024"
publish = false
description = "Generating Time-based One-Time Passwords on the Secret Network"
license = "Apache 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[dependencies]
cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
cosmwasm-storage = { git = "https://github.com/scrtlabs/cosmwasm", branch = "secret" }
serde = { version = "=1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0"
totp-rs = "^5.0"
